--- a/PCPersonnel/PCPersonnel.csproj
+++ b/PCPersonnel/PCPersonnel.csproj
@@ -11,5 +11,6 @@
     <Folder Include="Pages\" />
     <Folder Include="Pages\Shared\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
