--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
         command: login
 
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build the PC Personnel image
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/PCPersonnel/Dockerfile'
@@ -44,3 +44,21 @@ stages:
         tags: $(tag)
 
 
+    - task: Docker@2
+      displayName: 'Building postgresql docker image'
+      inputs:
+        containerRegistry: 'SebugDockerHub'
+        repository: 'sebug/postgresql-pcpersonnel'
+        command: 'build'
+        Dockerfile: 'postgresql/Dockerfile'
+        tags: '$(Build.BuildId)'
+
+    - script: cd $(Build.SourcesDirectory)/postgresql && docker build -t sebug/postgresql-pcpersonnel:$(Build.BuildId) .
+
+    - task: Docker@2
+      displayName: 'Pushing postgresql docker image'
+      inputs:
+        containerRegistry: 'SebugDockerHub'
+        repository: 'sebug/postgresql-pcpersonnel'
+        command: 'push'
+        tags: '$(Build.BuildId)'
