--- a/.gitignore
+++ b/.gitignore
@@ -414,8 +414,7 @@ client/message-log/Dockerfile
 # Environment variables
 connectionstring.env
 database.env
-
-02.initialdata.sql
+pgadmin_defaults.env
 
 ssh_key
 ssh_key.pub
